websocket ejem2: HTTPS, Spring 3 and refactor

--- a/parte_3/tema_3.3_websockets2/comunicacion-ws-ejem2/src/main/resources/templates/index.mustache
+++ b/parte_3/tema_3.3_websockets2/comunicacion-ws-ejem2/src/main/resources/templates/index.mustache
@@ -4,6 +4,7 @@
 <form action="create-report" method="post">
     <p>Report creation data:</p>
     <input type='text' name='reportCreationData'/>
+    <input type='hidden' name='_csrf' value='{{token}}'/>
 
     <input type='submit' value='Create'/>
 </form>
